# agent-spec_tech-support

./: .gitignore  README.md  pyproject.toml
agents/: __init__.py  base_agent.py  expert_reviewer.py  specialist_registry.py  triage_manager.py
agents/specialists/: __init__.py  application_code.py  cicd.py  cloud_infra.py  database.py  monitoring.py  networking.py  os_linux.py  security.py
config/: __init__.py  llm_profiles.py  safety_policy.py  settings.py
flows/: __init__.py  change_validation_flow.py  diagnostic_flow.py  escalation_flow.py  incident_response_flow.py
knowledge/: __init__.py  domain_prompts.py
modes/: __init__.py  expert_review_mode.py  manager_mode.py  mode_selector.py  orchestrator.py  specialist_workflow_mode.py  swarm_mode.py
safety/: __init__.py  approval_gate.py  audit_logger.py  command_allowlist.py  resource_limiter.py
scripts/: generate_specs.py  validate_specs.py
specs/agents/: base_agent.yaml  expert_reviewer.yaml  specialist_application_code.yaml  specialist_cicd.yaml  specialist_cloud_infra.yaml  specialist_database.yaml  specialist_monitoring.yaml  specialist_networking.yaml  specialist_os_linux.yaml  specialist_security.yaml  triage_manager.yaml
specs/modes/: manager_workers.yaml  orchestrator.yaml
tests/: conftest.py  test_agents.py  test_flows.py  test_modes.py  test_safety.py  test_serialization.py  test_tools.py
tools/: __init__.py  config_audit.py  knowledge_retrieval.py  log_analysis.py  monitoring_metrics.py  network_diagnostic.py  resource_monitor.py  shell_execution.py  ticket_management.py  tool_registry.py
(+13 files in other folders)
