[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tech-support-agent"
version = "0.1.0"
description = "Adaptive multi-modal tech support agent system built on Oracle Agent Spec"
requires-python = ">=3.10"
dependencies = [
    "pyagentspec",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
